# c_iz1

./: .gitignore  CMakeLists.txt  README.md  main.c
src/: CMakeLists.txt
src/automobile/: CMakeLists.txt  automobile.c  automobile.h
src/input/: CMakeLists.txt  input.c  input.h
src/menu/: CMakeLists.txt  menu.c
test/: CMakeLists.txt  main.cpp  test.cpp
